History in reverse order
----------------------------------------------------

----------------------------------------------------
infosme-build-20100915 16:00 bukind (v2)

2010-09-15 15:50 bukind
  bugfix: v2 only, curFile was modified when the future unnecessary
  files were attempted to be closed.

----------------------------------------------------
infosme-build-20100913 13:40 bukind (v1,v2)

2010-09-13 12:15 bukind
  bugfix (v1,v2): when adding messages in CsvStore::AppendRecord,
  there was a change to mis-set the pointer to current new message
  'curMsg'.  Then, when the pointer reachs the end of timeMap,
  there were still new messages that left behind.

2010-08-06 16:00 bukind
  feature: fast start of admin iface (v1,v2)

----------------------------------------------------
infosme-build-20100727 14:40 bukind (v1,v2)

2010-07-27 14:30 bukind
  core reorg: inheriting from SmeConfig instead of extending it,
  feature: by default ussdPush is disabled.

2010-07-26 13:20 bukind
  feature: deliveryMode for tasks, ussdOps per smscconnector (v1,v2)

2010-07-13 12:30 bukind
  feature: ussdServiceOp is configurable now

----------------------------------------------------
infosme-build-20100712 13:20 bukind (v1,v2)

2010-07-12 13:10 bukind
  bugfix: v2 (typo) wrong mutex locked in reloadSmscAndRegion led to dead-lock
  feature: when a new file is created at createMessage there is a check to
  close all future files -- it should save a lot of space on big deliveries.

2010-07-09 17:40 bukind
  feature: tasks are (optionally) placed into subdirs of storeLocation,
  the patch is returned back.

----------------------------------------------------
infosme-build-20100709-1 16:30 bukind (v1,v2)

2010-07-09 16:40 bukind
  feature: task processor is awaken up when receipt is received

2010-07-09 16:15 bukind
  previous patch is rolled back!
  bugfix: limit on the size of in-memory cache is now used
  
2010-07-09 15:40 bukind -- tag bukind-20100709-prefetch