@@ -1,6 +1,9 @@
 History in reverse order
 ----------------------------------------------------
 
+2010-12-29 11:05 bukind
+  bugfix: v2 don't disable smscconnector after bind failed
+
 ----------------------------------------------------
 infosme-build-20100915 16:00 bukind (v2)
 
